[tool.poetry]
name = "convert-dav-2-mp4"
version = "0.1.0"
description = "Converting .dav files to .mp4."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
